# CATIAV5-Post-Processor-

./: Apt-gcode startup.py  Blog  Py2.py  README.md  TO DO list  apt-gcode converter 1.py  apt_gcode_startup.py  apttapping.2  demooutput1.txt  izlaz.txt  izlaz2.txt  izlaz3.txt  izlaz4.txt  izlaz5.txt  izlaz6.txt  izlaz7.txt  izlaz8.txt  jezici.py  kshkjsbv.kjsfkbjv  logfajl.txt  output.js  output.py  parseline.py  pyproject.toml  test drag n drop.py
apt_gcode/: apt_gcode_startup.py  jezici.py  output.py
apt_gcode-web/: index.html  java_index.js  output.js  parseline.js  settings.js  startup.js
